# ClipPalette

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs
src/components/: ClipCard.tsx  ClipGrid.tsx  CodeBlock.tsx  OGPPreview.tsx  SearchBar.tsx  SettingsPanel.tsx  Sidebar.tsx  SnippetPanel.tsx
src/hooks/: useKeyboard.ts
src/lib/: detectCode.ts
src/store/: clipStore.ts
src/types/: index.ts
