[package]
name = "clip-palette"
version = "1.1.1"
description = "ClipPalette - Clipboard Manager"
authors = ["ClipPalette"]
edition = "2021"

[lib]
name = "clip_palette_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
regex = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
] }
